style: apply rustfmt formatting